ChatBot Function added

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -9,8 +9,8 @@
 <!-- Hero Section -->
 <header class="bg-dark text-white text-center py-5"
     style="background: url('static/img/landing_img.jpg') no-repeat center center; background-size: cover; height: 60vh;">
-    <div class="container pt-md-5">
-        <h1 class="display-1 pt-md-5 mt-md-5">Welcome to TEVISA</h1>
+    <div class="container pt-5">
+        <h1 class="display-1 pt-5 mt-md-5">Welcome to TEVISA</h1>
         <p class="lead">Empowering Sports in Zambia's Technical and Vocational Institutions</p>
         <a href="#tournaments" class="btn btn-light btn-lg mt-3">View Tournaments</a>
     </div>
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="static/images/tournament1.jpg" class="card-img-top" alt="Tournament 1">
+                    <img src="static/img/tournament.png" class="card-img-top" alt="Tournament 1">
                     <div class="card-body">
                         <h5 class="card-title">Spring Sports Festival</h5>
                         <p class="card-text">April 5 - April 15, 2024</p>
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="static/images/tournament2.jpg" class="card-img-top" alt="Tournament 2">
+                    <img src="static/img/tournament.png" class="card-img-top" alt="Tournament 2">
                     <div class="card-body">
                         <h5 class="card-title">National Tech Games</h5>
                         <p class="card-text">May 10 - May 20, 2024</p>
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="static/images/tournament3.jpg" class="card-img-top" alt="Tournament 3">
+                    <img src="static/img/tournament.png" class="card-img-top" alt="Tournament 3">
                     <div class="card-body">
                         <h5 class="card-title">Summer Youth Championships</h5>
                         <p class="card-text">June 5 - June 12, 2024</p>
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 <div class="card border-0 shadow-sm">
-                    <img src="static/images/news1.jpg" class="card-img-top" alt="News 1">
+                    <img src="static/img/news.jpeg" class="card-img-top" alt="News 1">
                     <div class="card-body">
                         <h5 class="card-title">TEVISA Hosts Annual Coaches Workshop</h5>
                         <p class="card-text">Over 100 coaches gathered for a workshop on sports management, physical
@@ -101,7 +101,7 @@
             </div>
             <div class="col-md-6 mb-4">
                 <div class="card border-0 shadow-sm">
-                    <img src="static/images/news2.jpg" class="card-img-top" alt="News 2">
+                    <img src="static/img/news.jpeg" class="card-img-top" alt="News 2">
                     <div class="card-body">
                         <h5 class="card-title">Spring Sports Festival Kicks Off</h5>
                         <p class="card-text">Students from across Zambia's vocational institutions gear up to
