--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='basketball.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='./css/chatbot.css') }}">
 </head>
 
 <body>
@@ -50,8 +51,26 @@
     <!-- Content -->
     {% block content %}{% endblock %}
 
+    <!-- templates/chatbot.html -->
+    <div id="chatbot">
+        <div id="chatbot-header">
+            <h5>Chatbot</h5>
+            <button id="chatbot-close">&times;</button>
+        </div>
+        <div id="chatbot-body">
+            <div id="chatbot-messages"></div>
+            <div id="chatbot-input">
+                <input type="text" id="chatbot-user-input" placeholder="Type your message..." autocomplete="off">
+                <button id="chatbot-send">Send</button>
+            </div>
+        </div>
+    </div>
+    <button id="chatbot-open">Chat</button>
+
+
     <!-- Bootstrap JS Bundle with Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/chatbot.js') }}"></script>
 </body>
 
 </html>
